<resources>
    <string name="app_name">ApkanaPA</string>
    //nazwa aplikacji

    <string name="witaj">Witaj w aplikacji do rzutu kostką</string>
    <string name="CZYkarta">Czy chcesz używać karty postaci?</string>
    <string name="karta">Karta</string>
    <string name="podaj_imie">Wpisz imie ponieżej:</string>
    <string name="imie">Imie Postaci:</string>
    <string name="dodaj_imie">dodaj</string>

    <string name="Graj">Graj!</string>

    <string name="k">kości</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="k2">K2</string>
    <string name="k3">K3</string>
    <string name="k4">K4</string>
    <string name="k6">K6</string>
    <string name="k8">K8</string>
    <string name="k10">K10</string>
    <string name="k20">K20</string>
    <string name="k100">K100</string>
    <string name="ks4">KS4</string>
    <string name="ks6">KS6</string>
    <string name="ks8">KS8</string>
    <string name="ks10">KS10</string>
    <string name="edycjakosci">Edytuj Kostki</string>

    <string name="Mody">Mody:</string>
    <string name="mod20">+20</string>
    <string name="modM20">-20</string>
    <string name="mod10">+10</string>
    <string name="modM10">-10</string>
    <string name="mod0">+0</string>

    <string name="iscianek">ilość ścianek:</string>
    <string name="irzut">ilość rzutów:</string>
    <string name="rzut">RZUT!</string>
    <string name="wyczysc">Wyczyść Historie</string>
    <string name="wróć">Cofni</string>

    <string-array name="cech">
        <item>WW</item>
        <item>US</item>
        <item>K</item>
        <item>Odp</item>
        <item>Zr</item>
        <item>Int</item>
        <item>SW</item>
        <item>Ogd</item>
    </string-array>

    <string name="specjalnaK">Specjalną kość:</string>
    <string name="DodKarte">Zmień karte posaci</string>
    <string name="Cecha">Cecha:</string>
    <string name="switc">karta</string>


    <string name="tu">tu bedzie historia rzutow</string>
    <string name="title_activity_profil_kart">profilKart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="WW">WW:</string>
    <string name="US">US:</string>
    <string name="K">K:</string>
    <string name="Odp">Odp:</string>
    <string name="Zr">Zr:</string>
    <string name="Int">Int:</string>
    <string name="SW">SW:</string>
    <string name="Ogd">Ogd:</string>

    <string name="Zapisz">Zapisz</string>

    <string name="jeden">1</string>
    <string name="dwa">2</string>
    <string name="trzy">3</string>
    <string name="cztery">4</string>
    <string name="piec">5</string>
    <string name="szesc">6</string>
    <string name="siedem">7</string>
    <string name="osiem">8</string>
    <string name="dziewiec">9</string>
    <string name="dziesiec">10</string>

    <string name="losuj">losuj</string>

    <string name="Usuń">Usuń</string>
    <string name="Scianka">Nazwa ścianki</string>

</resources>
